        * [BUGFIX]: #2954 #2803 #2937 Fixed incorrect recreation of foreign keys chain.
        * [BUGFIX]: #3055 Fixed crash when exporting on MacOS using plugin that requires column value length information (such as PDF export plugin).
        * [BUGFIX]: #3047 Fixed copying/moving tables together with indexes or triggers with Drag&Drop across same SQLite version databases.

[3.0.7]
        * [ADDED]: #2951 Implemented dropdown value picking for foreign key columns in grid view.
        * [ADDED]: Context menu entry to go to row in referenced table by current foreign key cell value.
        * [BUGFIX]: #2875 Fixed font misconfiguration after Qt update.
        * [BUGFIX]: #2879 Fixed View updating after table modification, when view uses SELECT with table alias same as table name.
        * [BUGFIX]: #2885 Fixed tokens parsing, causing random problems, such as incorrect formatting performed by the simple formatter.
        * [BUGFIX]: Fixed preventing of setting null or empty value on query results that don't come directly from table.
        * [BUGFIX]: Fixed duplicates while copying mupltiple lines from status field.

[3.0.6]
        * [ADDED]: #2740 Option to configure whether bottom dock area (with status field) should extend to left border, or should it leave space for database list.
        * [ADDED]: #2819 Introduced "compact layout" as an option (enabled by default) to minimize all margins on the interface.
        * [ADDED]: CSS console for SQLiteStudio (under F11 key) to allow customizing all aspects UI look and feel at a low level.
        * [ADDED]: #2805 The 'Save SQL' action in SQL editor now uses the same file if repeated, unless user picks 'select file to save' from drop-down menu.
        * [ADDED]: #2801 Added option to select where to position the new inserted row - above/below selected row, or at the end of data view.